added lonbok dependency into pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -86,10 +86,14 @@
 			<version>${aspectj.version}</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.28</version>
+		</dependency>
 
 
 	</dependencies>
-
 
 
 	<build>
@@ -114,8 +118,9 @@
 					<forkCount>3</forkCount>
 					<reuseForks>true</reuseForks>
 					<suiteXmlFiles>
-						<!-- <suiteXmlFile>src/test/resources/testrunners/testng_regression.xml</suiteXmlFile> -->
-						 <suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
+						<!--
+						<suiteXmlFile>src/test/resources/testrunners/testng_regression.xml</suiteXmlFile> -->
+						<suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
 					</suiteXmlFiles>
 
 					<argLine>
@@ -134,7 +139,6 @@
 			</plugin>
 		</plugins>
 	</build>
-
 
 
 </project>
