--- a/pom.xml
+++ b/pom.xml
@@ -86,11 +86,11 @@
 			<version>${aspectj.version}</version>
 		</dependency>
 
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<version>1.18.28</version>
-		</dependency>
+		</dependency> -->
 
 
 	</dependencies>
@@ -118,9 +118,12 @@
 					<forkCount>3</forkCount>
 					<reuseForks>true</reuseForks>
 					<suiteXmlFiles>
-						<!--
-						<suiteXmlFile>src/test/resources/testrunners/testng_regression.xml</suiteXmlFile> -->
-						<suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
+
+
+						<suiteXmlFile>
+							src/test/resources/testrunners/testng_regression.xml
+							</suiteXmlFile>
+						<!--<suiteXmlFile>${suiteXmlFile}</suiteXmlFile> -->
 					</suiteXmlFiles>
 
 					<argLine>
