Added lombok dependency

--- a/pom.xml
+++ b/pom.xml
@@ -86,11 +86,11 @@
 			<version>${aspectj.version}</version>
 		</dependency>
 
-		<!-- <dependency>
+		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<version>1.18.28</version>
-		</dependency> -->
+		</dependency> 
 
 
 	</dependencies>
